Added back host level port mapping