@@ -207,69 +207,70 @@ public class ExecutorTestingUtils {
         return testLocalServiceInstanceSpec(imageName, attempt, false);
     }
 
-    public static LocalServiceInstanceSpec testLocalServiceInstanceSpec(final String imageName, int attempt, boolean useHttps) {
+    public static LocalServiceInstanceSpec testLocalServiceInstanceSpec(
+            final String imageName,
+            int attempt,
+            boolean useHttps) {
         val protocol = useHttps ? Protocol.HTTPS : Protocol.HTTP;
         val portType = useHttps ? PortType.HTTPS : PortType.HTTP;
         return new LocalServiceInstanceSpec("T001",
-                                           "TEST_SPEC",
-                                           UUID.randomUUID().toString(),
-                                           new DockerCoordinates(imageName, Duration.seconds(100)),
-                                           ImmutableList.of(new CPUAllocation(Collections.singletonMap(0,
-                                                                                                       Set.of(2, 3))),
-                                                            new MemoryAllocation(Collections.singletonMap(0, 512L))),
-                                           Collections.singletonList(new PortSpec("main", 8000, portType)),
-                                           List.of(new MountedVolume("/tmp",
-                                                                     "/tmp",
-                                                                     MountedVolume.MountMode.READ_ONLY)),
-                                           List.of(new InlineConfigSpec("/files/drove.txt", base64("Drove Test"))),
-                                           new CheckSpec(new HTTPCheckModeSpec(protocol,
-                                                                               "main",
-                                                                               "/",
-                                                                               HTTPVerb.GET,
-                                                                               Collections.singleton(200),
-                                                                               "",
-                                                                               Duration.seconds(1),
-                                                                               useHttps),
-                                                         Duration.seconds(1),
-                                                         Duration.seconds(3),
-                                                         attempt,
-                                                         Duration.seconds(0)),
-                                           new CheckSpec(new HTTPCheckModeSpec(protocol,
-                                                                               "main",
-                                                                               "/",
-                                                                               HTTPVerb.GET,
-                                                                               Collections.singleton(200),
-                                                                               "",
-                                                                               Duration.seconds(1),
-                                                                               useHttps),
-                                                         Duration.seconds(1),
-                                                         Duration.seconds(3),
-                                                         attempt,
-                                                         Duration.seconds(1)),
-                                           LocalLoggingSpec.DEFAULT,
-                                           Collections.emptyMap(),
-                                           imageName.equals(CommonTestUtils.APP_IMAGE_NAME)
-                                           ? List.of("./entrypoint.sh", "arg1", "arg2")
-                                           : null,
-                                           List.of(DirectDeviceSpec.builder()
-                                                           .pathOnHost("/dev/random")
-                                                           .pathInContainer("/dev/random")
-                                                           .permissions(DirectDeviceSpec.DirectDevicePermissions.ALL)
-                                                           .build()),
-                                           new PreShutdownSpec(List.of(new HTTPCheckModeSpec(protocol,
-                                                                                             "main",
-                                                                                             "/",
-                                                                                             HTTPVerb.GET,
-                                                                                             Collections.singleton(200),
-                                                                                             "",
-                                                                                             Duration.seconds(1),
-                                                                                             useHttps),
-                                                                       new CmdCheckModeSpec("echo -n 1"),
-                                                                       new CmdCheckModeSpec("SomeWrongCommand")
-                                                                      ),
-                                                               Duration.seconds(1)),
-                                           null,
-                                           "TestToken");
+                                            UUID.randomUUID().toString(),
+                                            new DockerCoordinates(imageName, Duration.seconds(100)),
+                                            List.of(new CPUAllocation(Collections.singletonMap(0, Set.of(2, 3))),
+                                                    new MemoryAllocation(Collections.singletonMap(0, 512L))),
+                                            List.of(new PortSpec("main", 8000, portType)),
+                                            false,
+                                            List.of(new MountedVolume("/tmp",
+                                                                      "/tmp",
+                                                                      MountedVolume.MountMode.READ_ONLY)),
+                                            List.of(new InlineConfigSpec("/files/drove.txt", base64("Drove Test"))),
+                                            new CheckSpec(new HTTPCheckModeSpec(protocol,
+                                                                                "main",
+                                                                                "/",
+                                                                                HTTPVerb.GET,
+                                                                                Collections.singleton(200),
+                                                                                "",
+                                                                                Duration.seconds(1),
+                                                                                useHttps),
+                                                          Duration.seconds(1),
+                                                          Duration.seconds(3),
+                                                          attempt,
+                                                          Duration.seconds(0)),
+                                            new CheckSpec(new HTTPCheckModeSpec(protocol,
+                                                                                "main",
+                                                                                "/",
+                                                                                HTTPVerb.GET,
+                                                                                Collections.singleton(200),
+                                                                                "",
+                                                                                Duration.seconds(1),
+                                                                                useHttps),
+                                                          Duration.seconds(1),
+                                                          Duration.seconds(3),
+                                                          attempt,
+                                                          Duration.seconds(1)),
+                                            LocalLoggingSpec.DEFAULT,
+                                            Collections.emptyMap(),
+                                            imageName.equals(CommonTestUtils.APP_IMAGE_NAME)
+                                            ? List.of("./entrypoint.sh", "arg1", "arg2")
+                                            : null,
+                                            List.of(DirectDeviceSpec.builder()
+                                                            .pathOnHost("/dev/random")
+                                                            .pathInContainer("/dev/random")
+                                                            .permissions(DirectDeviceSpec.DirectDevicePermissions.ALL)
+                                                            .build()),
+                                            new PreShutdownSpec(List.of(new HTTPCheckModeSpec(protocol,
+                                                                                              "main",
+                                                                                              "/",
+                                                                                              HTTPVerb.GET,
+                                                                                              Collections.singleton(200),
+                                                                                              "",
+                                                                                              Duration.seconds(1),
+                                                                                              useHttps),
+                                                                        new CmdCheckModeSpec("echo -n 1"),
+                                                                        new CmdCheckModeSpec("SomeWrongCommand")
+                                                                       ),
+                                                                Duration.seconds(1)),
+                                            "TestToken");
     }
 
     public static ExecutorAddress localAddress() {
@@ -304,26 +305,30 @@ public class ExecutorTestingUtils {
                                         new Date());
     }
 
-    public static ExecutorLocalServiceInstanceInfo createExecutorLocaLServiceInstanceInfo(LocalServiceInstanceSpec spec, WireMockRuntimeInfo wm)  {
+    public static ExecutorLocalServiceInstanceInfo createExecutorLocaLServiceInstanceInfo(
+            LocalServiceInstanceSpec spec,
+            WireMockRuntimeInfo wm) {
         return createExecutorLocaLServiceInstanceInfo(spec, wm.getHttpPort());
     }
 
-    public static ExecutorLocalServiceInstanceInfo createExecutorLocaLServiceInstanceInfo(LocalServiceInstanceSpec spec, int port) {
+    public static ExecutorLocalServiceInstanceInfo createExecutorLocaLServiceInstanceInfo(
+            LocalServiceInstanceSpec spec,
+            int port) {
         return new ExecutorLocalServiceInstanceInfo(spec.getServiceId(),
-                                        spec.getServiceName(),
-                                        spec.getInstanceId(),
-                                        EXECUTOR_ID,
-                                        new LocalInstanceInfo("localhost",
-                                                              Collections.singletonMap(
-                                                                      "main",
-                                                                      new InstancePort(
-                                                                              8080,
-                                                                              port,
-                                                                              PortType.HTTP))),
-                                        spec.getResources(),
-                                        spec.getEnv(),
-                                        new Date(),
-                                        new Date());
+                                                    spec.getServiceName(),
+                                                    spec.getInstanceId(),
+                                                    EXECUTOR_ID,
+                                                    new LocalInstanceInfo("localhost",
+                                                                          Collections.singletonMap(
+                                                                                  "main",
+                                                                                  new InstancePort(
+                                                                                          8080,
+                                                                                          port,
+                                                                                          PortType.HTTP))),
+                                                    spec.getResources(),
+                                                    spec.getEnv(),
+                                                    new Date(),
+                                                    new Date());
     }
 
     public static ExecutorTaskInfo createExecutorTaskInfo(TaskInstanceSpec spec) {
